syntax = "proto3";

option csharp_namespace = "StreamGrpcServerPlayground";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
  int32 count = 2;
  bool upperResult = 3;
  bool lowerResult = 4;
}

message HelloReply {
  string message = 1;
  int32 index = 2;
}
